News: Paste Script
==================

.. contents::

svn trunk
---------

* CherryPy wsgiserver updated to the 3.1.0 release's.

1.6.3
-----

* Fixes for ``paste.script.filemaker``

* A setuptools ``egg_info.writers`` entry point is now provided that's
  responsible for writing paster_plugins.txt for projects that define
  a new ``paster_plugins`` setup() keyword. paster_plugins.txt will
  still be created for new projects that need it and lack a
  ``paster_plugins`` setup() keyword, but this is deprecated. Projects
  defining ``paster_plugins`` in setup() should also define a
  ``setup_requires`` setup() keyword including PasteScript.

* An ``egg_plugins`` variable (a list of strings based off the
  Templates classes' ``egg_plugins`` variables) is now available to
  paster create templates for the new ``paster_plugins`` setup()
  keyword.

* PasteScript is no longer included in
  ``egg_plugins``/paster_plugins.txt by default.

1.6.2
-----

* Fix SkipTemplate (could raise ``TypeError: argument 1 must be string
  or read-only buffer, not None`` before)

1.6.1 (and 1.6.1.1)
-------------------

* Fix paster serve under Windows.

1.6
---

* Added commands ``paster request config.ini URL`` and ``paster post
  config.ini URL < post-body``, that allow you to do artificial
  requests to applications.

* Check the writability of the pid and log files earlier.  This caused
  particular problems if you started it in daemon mode, and the files
  weren't writable.  From Chris Atlee.

* Start the monitor (when using ``--monitor``) after daemonizing, so
  that ``paster serve --monitor --daemon`` works (before it would
  constantly restart).

* In Paste Script templates, you can give ``should_echo=False`` in
  variable definitions, and if the user is queried for the variable
  then the input will not be echoed (as for a password).  From Dirceu
  Pereira Tiegs.

* Added a method
  ``paste.script.appinstall.Installer.template_renderer``, which can